--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,11 +6,11 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: ubuntu-12.04
+#  - name: ubuntu-12.04
   - name: centos-6.5
 
 suites:
-  - name: default
+  - name: source
     run_list:
-      - recipe[Bowtie::default]
+      - recipe[Bowtie::source]
     attributes:
