--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,5 +12,5 @@ platforms:
 suites:
   - name: source
     run_list:
-      - recipe[Bowtie::source]
+      - recipe[Bowtie::default]
     attributes:
