--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,13 +6,19 @@ driver:
 provisioner:
   name: chef_zero
 
+verifier:
+  name: inspec
+  # sudo: false # if 'true' (default) inSpec will run tests as 'root', rather than 'kitchen'
+  format: doc
+  sudo_command: '. /etc/profile;'
+
 platforms:
 #  - name: ubuntu-12.04
   - name: centos-6.5
   - name: centos-7.0
 
 suites:
-  - name: source
+  - name: bowtie
     run_list:
       - recipe[Bowtie::default]
     attributes:
