--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,12 +8,11 @@ provisioner:
 
 verifier:
   name: inspec
-  # sudo: false # if 'true' (default) inSpec will run tests as 'root', rather than 'kitchen'
   format: doc
   sudo_command: '. /etc/profile;'
 
 platforms:
-#  - name: ubuntu-12.04
+  - name: ubuntu-14.04
   - name: centos-6.5
   - name: centos-7.0
 
@@ -22,3 +21,9 @@ suites:
     run_list:
       - recipe[Bowtie::default]
     attributes:
+  - name: bowtie2
+    run_list:
+      - recipe[Bowtie::default]
+    attributes:
+      Bowtie:
+        version: '2.2.9'
