--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,29 +1,23 @@
----
 driver:
   name: docker
   use_sudo: false
-
 provisioner:
   name: chef_zero
-
 verifier:
   name: inspec
-  format: doc
-  sudo_command: '. /etc/profile;'
-
+  sudo_command: . /etc/profile;
 platforms:
-  - name: ubuntu-14.04
-  - name: centos-6.5
-  - name: centos-7.0
-
+- name: ubuntu-14.04
+- name: centos-6.5
+- name: centos-7.0
 suites:
-  - name: bowtie
-    run_list:
-      - recipe[Bowtie::default]
-    attributes:
-  - name: bowtie2
-    run_list:
-      - recipe[Bowtie::default]
-    attributes:
-      Bowtie:
-        version: '2.2.9'
+- name: bowtie
+  run_list:
+  - recipe[Bowtie::default]
+  attributes:
+- name: bowtie2
+  run_list:
+  - recipe[Bowtie::default]
+  attributes:
+    Bowtie:
+      version: 2.2.9
