--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,23 +1,33 @@
+---
 driver:
   name: docker
-  use_sudo: false
+
 provisioner:
   name: chef_zero
+  product_version: '14.10'
+  product_name: chef
+  
 verifier:
   name: inspec
   sudo_command: . /etc/profile;
+
 platforms:
-- name: ubuntu-14.04
-- name: centos-6.5
-- name: centos-7.0
+  - name: ubuntu-18.04
+
 suites:
-- name: bowtie
-  run_list:
-  - recipe[Bowtie::default]
-  attributes:
-- name: bowtie2
-  run_list:
-  - recipe[Bowtie::default]
-  attributes:
-    Bowtie:
-      version: 2.2.9
+  - name: bowtie
+    run_list:
+      - recipe[Bowtie::default]
+    verifier:
+      inspec_tests:
+        - test/integration/bowtie/inspec
+  - name: bowtie2
+    run_list:
+      - recipe[Bowtie::default]
+    verifier:
+      inspec_tests:
+        - test/integration/bowtie2/inspec
+    attributes:
+      Bowtie:
+        version: 2.2.9
+    
